Fixing templates and styles

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,28 @@
-<body>
-  <app-root></app-root>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>TasksApp</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body class="d-flex justify-content-center ">
+  <div class="row d-flex justify-content-center container">
+    <div class="col-md-12 col-sm-12">
+      <div class="card-hover-shadow-2x mb-3 card">
+        <div class="scroll-area-sm">
+          <perfect-scrollbar class="ps-show-limits">
+            <div style="position: static;" class="ps ps--active-y">
+              <div class="ps-content">
+                <app-root></app-root>
+              </div>
+            </div>
+          </perfect-scrollbar>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
+</html>
